@@ -48,6 +48,9 @@ static void fault_report(int sig)
 #ifdef SIGBUS
 		CatchSignal(SIGBUS,SIGNAL_CAST SIG_DFL);
 #endif
+#ifdef SIGABRT
+		CatchSignal(SIGABRT,SIGNAL_CAST SIG_DFL);
+#endif
 		return; /* this should cause a core dump */
 	}
 	exit(1);
@@ -74,7 +77,7 @@ void fault_setup(void (*fn)(void *))
 #ifdef SIGBUS
 	CatchSignal(SIGBUS,SIGNAL_CAST sig_fault);
 #endif
+#ifdef SIGABRT
+	CatchSignal(SIGABRT,SIGNAL_CAST sig_fault);
+#endif
 }
-
-
-
